2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-18  Karl Berry  <karl@tug.org>

	* texmf.cnf (save_size): reset to 80000 since that is what
	sup_save_size is set to in tex.ch. Found by Christian Schenk,
	tex-live 18 Mar 2021 18:39:04.

2021-03-08  Karl Berry  <karl@freefriends.org>

	* tests/cnfline/texmf.cnf (maxpr.lt-kpsewhich): set this,
	for --enable-shared builds.
	https://tug.org/pipermail/tex-k/2021-March/003490.html
	* tests/cnfline.test: unset maxpr othervar, just in case
	they are set in the environment. Maybe unset on an unset variable
	is portable enough nowadays?

2021-02-17  Karl Berry  <karl@freefriends.org>

	* doc/kpathsea.texi,
	* version.ac (kpse_dev): no /dev for 6.3.3.
	* NEWS,
	* doc/kpathsea.texi,
	* kpsewhich.c,
	* texmf.cnf: copyright 2021.

2020-12-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* knj.[ch]: Add new functions win32_fprintf(), win32_perror().
	(Windows only)

2020-10-24  Akira Kakuto  <kakuto@w32tex.org>

	* readable.c, knj.c: More than one adjacent directory
	separators in filename+2 should not exist in \\?\ form of
	absolute path.

2020-08-26  Karl Berry  <karl@tug.org>

	* texmf.cnf (save_size): double to 200,000. Needed with
	long documents, tex4ht, and l3regex. Hopefully no harm in increasing.
	https://tug.org/pipermail/tex4ht/2020q3/002710.html

2020-07-05  Karl Berry  <karl@freefriends.org>

	* configure.ac (snprintf): two more test programs
	also need <stdarg.h> and <stdio.h>.

2020-07-04  Karl Berry  <karl@freefriends.org>

	* configure.ac (snprintf): #include <stdio.h> to placate
	new arm64 Mac compiler, since apparently that's the standard
	place for the [v]snprintf declaration. We'll see. Report from Dick.

2020-06-22  Karl Berry  <karl@freefriends.org>

	* Makefile.am (EXTRA_DIST): add COPYING.LESSERv2.
	* texmf.cnf (expand_depth, pk_dpi, strings_free): write a few
	words about these parameters; see web2c/doc for more.

2020-06-12  Karl Berry  <karl@freefriends.org>
