@@ -117,7 +117,7 @@ kpathsea_fsyscp_xfopen (kpathsea kpse, const char *filename, const char *mode)
     wchar_t *fnamew, modew[4];
     int i;
     unsigned char *fnn;
-    unsigned char *p;
+    unsigned char *p = NULL;
     size_t len;
 
     assert(filename && mode);
@@ -129,9 +129,22 @@ kpathsea_fsyscp_xfopen (kpathsea kpse, const char *filename, const char *mode)
   /./ , /../, \.\, \..\ should be excluded. (2020/06/06)
   More than one adjacent directory separators should be
   excluded. (2020/10/24)
+  The "nul" device should be excluded. (2021/04/07).
 */
     fnn = xmalloc(len + 10);
-    p = strstr(filename, ".\\");
+
+    if (stricmp(filename + len - 3, "nul") == 0)
+       p = (unsigned char *)filename;
+    else if (stricmp(filename + len - 4, "nul:") == 0)
+       p = (unsigned char *)filename;
+    else if (stricmp(filename + len - 7, "nul.tex") == 0)
+       p = (unsigned char *)filename;
+    else if (stricmp(filename + len - 8, "nul:.tex") == 0)
+       p = (unsigned char *)filename;
+
+    if (!p) {
+       p = strstr(filename, ".\\");
+    }
     if (!p) {
        p = strstr(filename, "./");
     }
@@ -159,6 +172,7 @@ kpathsea_fsyscp_xfopen (kpathsea kpse, const char *filename, const char *mode)
     } else {
        strcpy (fnn, filename);
     }
+
     for (p = fnn; *p; p++) {
       if (*p == '/')
          *p = '\\';
@@ -196,7 +210,7 @@ kpathsea_fsyscp_fopen (kpathsea kpse, const char *filename, const char *mode)
     wchar_t *fnamew, modew[4];
     int i;
     unsigned char *fnn;
-    unsigned char *p;
+    unsigned char *p = NULL;
     size_t len;
 
     assert(filename && mode);
@@ -208,9 +222,22 @@ kpathsea_fsyscp_fopen (kpathsea kpse, const char *filename, const char *mode)
   /./ , /../, \.\, \..\ should be excluded. (2020/06/06)
   More than one adjacent directory separators should be
   excluded. (2020/10/24)
+  The "nul" device should be excluded. (2021/04/07).
 */
     fnn = xmalloc(len + 10);
-    p = strstr(filename, ".\\");
+
+    if (stricmp(filename + len - 3, "nul") == 0)
+       p = (unsigned char *)filename;
+    else if (stricmp(filename + len - 4, "nul:") == 0)
+       p = (unsigned char *)filename;
+    else if (stricmp(filename + len - 7, "nul.tex") == 0)
+       p = (unsigned char *)filename;
+    else if (stricmp(filename + len - 8, "nul:.tex") == 0)
+       p = (unsigned char *)filename;
+
+    if (!p) {
+       p = strstr(filename, ".\\");
+    }
     if (!p) {
        p = strstr(filename, "./");
     }
@@ -238,6 +265,7 @@ kpathsea_fsyscp_fopen (kpathsea kpse, const char *filename, const char *mode)
     } else {
        strcpy (fnn, filename);
     }
+
     for (p = fnn; *p; p++) {
       if (*p == '/')
          *p = '\\';
@@ -635,8 +663,10 @@ kpathsea_win32_perror(kpathsea kpse, const char *str)
 {
     wchar_t *wstr;
 
-    if (kpse->File_system_codepage != CP_UTF8)
-        return perror(str);
+    if (kpse->File_system_codepage != CP_UTF8) {
+        perror(str);
+        return;
+    }
 
     wstr = get_wstring_from_utf8(str, wstr=NULL);
     _wperror(wstr);
